# offpage

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
ai_context/: README.md  architecture.md  (+10 more)
automation/: README.md  config.toml  pyproject.toml
automation/ingestion/: __init__.py  validator.py
automation/persona_extraction/: __init__.py  __main__.py  cli.py  config.py  consistency_checker.py  failed_lane_log.py  git_utils.py  json_repair.py  lane_output.py  llm_backend.py  manifests.py  migrate_baseline_to_stage_snapshot.py  orchestrator.py  post_processing.py  process_guard.py  progress.py  prompt_builder.py  rate_limit.py  review_lanes.py  scene_archive.py  schema_autofix.py  schema_loader.py  validator.py
automation/prompt_templates/: analysis.md  baseline_production.md  character_extraction.md  character_snapshot_extraction.md  character_support_extraction.md  coordinated_extraction.md  scene_split.md  semantic_review.md  semantic_review_char_snapshot.md  semantic_review_char_support.md  semantic_review_character.md  semantic_review_world.md  summarization.md  targeted_fix.md  world_extraction.md
automation/repair_agent/: __init__.py  _smoke_l3_gate.py  _smoke_triage.py  context_retriever.py  coordinator.py  field_patch.py  notes_writer.py  protocol.py  recorder.py  tracker.py  triage.py
automation/repair_agent/checkers/: __init__.py  json_syntax.py  schema.py  semantic.py  structural.py  targets_keys_eq_baseline.py
automation/repair_agent/fixers/: __init__.py  file_regen.py  local_patch.py  programmatic.py  source_patch.py
(+545 files in other folders)
